--- a/SMEObs1.yaml
+++ b/SMEObs1.yaml
@@ -24,7 +24,7 @@ splunkPlatform:
   token: 9609730b-994a-41a8-b72f-3b5d8d42e5c0 
   index: "main"
   metricsIndex: "maintmetircs"
-  metricsEnabled: false
-  tracesEnabled: false
+  metricsEnabled: true
+  tracesEnabled: true
   logsEnabled: true
   insecureSkipVerify: true
