--- a/SMEObs1.yaml
+++ b/SMEObs1.yaml
@@ -20,7 +20,7 @@ splunkObservability:
   metricsEnabled: true
   tracesEnabled: true
 splunkPlatform:
-  endpoint: https:///http-inputs.splunkods.splunkcloud.com:443/services/collector/event
+  endpoint: https://http-inputs.splunkods.splunkcloud.com:443/services/collector/event
   token: a319f672-1b42-4201-a443-54b35ae6f1d8
   index: "ajdmainevents"
   metricsIndex: "ajdmaintmetircs"
